# hopium

./: '  .gitignore  .rgignore  CMakeLists.txt  Cargo.toml  Colorscheme.h  Dockerfile  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Ui.cpp  Ui.h  compile_commands.json  layout.json  main.cpp  odinfmt.json  ols.json  projection.py
assets/: toilet_rolls.mtl
cpp_code/: CMakeLists.txt  README.md  deps.py
cpp_code/shaders/: fs.glsl
cpp_code/src/: ApplicationState.h  Event.h
cpp_code/src/cad/: ConstraintGraph.cpp  ConstraintGraph.h  OcctScene.cpp  Sketch.cpp  Sketch.h
cpp_code/src/modes/: DimensionMode.cpp  ExtrudeMode.cpp  GlobalMode.cpp  GlobalMode.h  LineMode.h  PointMode.cpp  SketchMode.cpp  TLineMode.cpp
cpp_code/src/rendering/: Renderer.cpp  Renderer.h  Scene.h  Ui.h
cpp_code/src/rendering/ui/: DropDown.cpp  DropDown.h  GraphViewer.h  Icon.h  Rect.cpp  Rect.h  Row.cpp  Row.h  STreeViewer.cpp  STreeViewer.h  Text.h  TextInput.cpp  Viewport.cpp  Viewport.h
shaders/: fs.glsl  vs.glsl
src/: Application.cpp  Application.h  ApplicationState.cpp  ApplicationState.h  Colorscheme.h  ConstraintGraph.cpp  ConstraintGraph.h  Event.cpp  Event.h  Mode.cpp  Mode.h  OcctScene.cpp  OcctScene.h  OcctTest.cpp  OcctTest.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderStore.cpp  ShaderStore.h  System.cpp  System.h  Ui.cpp  Ui.h  app.rs  combined_draw_handle.rs  event.rs  images.rs  main.cpp  main.odin  main.rs  registry.rs  test.cpp
src/cad/: ConstraintGraph.cpp  ConstraintGraph.h  OcctScene.cpp  OcctScene.h  Sketch.cpp  Sketch.h  entity.rs  mod.rs  sketch.rs
src/modes/: DimensionMode.cpp  DimensionMode.h  ExtrudeMode.cpp  ExtrudeMode.h  GlobalMode.cpp  GlobalMode.h  LineMode.cpp  LineMode.h  PointMode.cpp  PointMode.h  SketchMode.cpp  SketchMode.h  TLineMode.cpp  TLineMode.h  arc_three_point.rs  capped_line.rs  circle.rs  command.rs  data_entry.rs  global.rs  line.rs  mod.rs  point.rs  sketch.rs
src/rendering/: Colorscheme.cpp  Renderer.cpp  Renderer.h  Ui.cpp  Ui.h  area.rs  boundary.rs  mod.rs  renderer.rs
src/rendering/ui/: GraphViewer.cpp  Icon.cpp  SketchViewer.cpp  SketchViewer.h  Text.cpp  TextInput.h  ToolList.cpp  ToolList.h  Viewport.cpp  Viewport.h
src/sketch/: error.odin
src/state/: state.odin
src/ui/: command_palette.rs  constraint_selector.rs  data_entry.rs  dropdown.rs  icon.rs  mod.rs  rect.rs  sketchviewer.rs  style.rs  text.rs  toolbar.rs
test/: test.cpp
tests/: tests.odin
