[package]
name = "hopium"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
lazy_static = "1.5.0"
log = "0.4.22"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
raylib = { version = "5.0", features = ["wayland", "nalgebra", "nalgebra_interop"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
simplelog = "0.12.2"
strum = "0.26.3"
strum_macros = "0.26.4"

